# trading-systems

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
src/book/: CMakeLists.txt
src/book/include/book/: lob.hpp
src/book/src/: lob.cpp  lob.test.cpp
src/engine/: engine.hpp  engine.test.cpp
